# Scraping_Estado_SP

./: README.md  main.py  pyproject.toml
Arrecadacao/: Arrecadação por UF - Internet - Abr21.ods  Arrecadação por UF - Internet - Ago20.ods  Arrecadação por UF - Internet - Agosto 2021.ods  Arrecadação por UF - Internet - Dez20.ods  Arrecadação por UF - Internet - Dezembro 2021.ods  Arrecadação por UF - Internet - Fev21.ods  Arrecadação por UF - Internet - Jan21.ods  Arrecadação por UF - Internet - Julho 2021.ods  Arrecadação por UF - Internet - Junho 2021.ods  Arrecadação por UF - Internet - Maio21.ods  Arrecadação por UF - Internet - Mar21.ods  Arrecadação por UF - Internet - Nov20.ods  Arrecadação por UF - Internet - Novembro 2021.ods  Arrecadação por UF - Internet - Out20.ods  Arrecadação por UF - Internet - Outubro 2021.ods  Arrecadação por UF - Internet - Set20.ods  Arrecadação por UF - Internet - Setembro 2021.ods  arrecadacao-por-uf-internet-abr15.ods  arrecadacao-por-uf-internet-abr16.ods  arrecadacao-por-uf-internet-abr17.ods  arrecadacao-por-uf-internet-abr18.ods  arrecadacao-por-uf-internet-abr19.ods  arrecadacao-por-uf-internet-abr20.ods  arrecadacao-por-uf-internet-ago15.ods  arrecadacao-por-uf-internet-ago16.ods  arrecadacao-por-uf-internet-ago18.ods  arrecadacao-por-uf-internet-ago19.ods  arrecadacao-por-uf-internet-agosto17.ods  arrecadacao-por-uf-internet-dez14.ods  arrecadacao-por-uf-internet-dez15.ods  arrecadacao-por-uf-internet-dez16.ods  arrecadacao-por-uf-internet-dez17.ods  arrecadacao-por-uf-internet-dez18.ods  arrecadacao-por-uf-internet-dez19.ods  (+62 more)
